# hikari

./: Cargo.toml  LICENSE  Makefile  README.md  STRUCTURE.md  build.rs  flake.nix  linker.ld  rust-toolchain.toml  x86_64.json
.cargo/: config.toml
src/: kinfo.rs  main.rs  panic.rs
src/abstracts/: cpu.rs  mod.rs  trap.rs
src/abstracts/interrupt/: controller.rs
src/abstracts/memory/: address.rs  mod.rs  table.rs  vm.rs
src/arch/: mod.rs
src/arch/x86/: entry.rs  gdt.rs  init.rs  mod.rs  paging.rs  registers.rs
src/arch/x86/hal_impl/: mod.rs  trace.rs
src/arch/x86/interrupts/: exceptions.rs  mod.rs  trap.rs
src/boot/: mod.rs
src/boot/loader/: mod.rs
src/common/: mod.rs
src/common/debug/: mod.rs
src/common/debug/console/: mod.rs
src/common/debug/graphics/: canvas.rs  mod.rs  screen.rs
src/common/debug/logger/: mod.rs
src/common/macros/: convertible_enum.rs  mod.rs
src/common/structs/: buffer.rs  cell.rs  mod.rs  offset.rs  reader.rs  register.rs
src/devices/: mod.rs
src/devices/acpi/: mod.rs
src/devices/efifb/: mod.rs
src/devices/uart/: mod.rs  u16550.rs
src/drivers/: mod.rs
src/drivers/graphics/: canvas.rs  mod.rs  screen.rs
src/drivers/uart/: u16550.rs
src/hal/: trap.rs
src/hal/memory/: mod.rs  table.rs  utils.rs  vm.rs
src/interrupt/: controller.rs  manager.rs  mod.rs
src/mem/: address.rs  frame.rs  mod.rs  paging.rs
src/memory/: mod.rs
src/memory/paging/: mod.rs
src/sys/: init.rs  mod.rs
src/sys/interrupt/: mod.rs
src/sys/mem/: frame.rs  heap.rs  mod.rs
src/sys/multitask/: mod.rs
(+20 files in other folders)
